--- a/index.html
+++ b/index.html
@@ -47,8 +47,24 @@
         <a href="#" class="cta">Beli Sekarang</a>
       </main>
     </section>
-
     <!-- Hero Section End -->
+
+    <!-- About Section Start -->
+    <section class="about" id="about">
+      <h2><span>Tentang</span> Kami</h2>
+
+      <div class="row">
+        <div class="about-img">
+          <img src="img/tentang-kami.jpg" alt="Tentang Kami">
+        </div>
+        <div class="content">
+          <h3>Kenapa memilih kopi kami?</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis debitis, numquam ex quis voluptate obcaecati?</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum esse ex expedita nam repellendus magni in exercitationem non, reiciendis vel?</p>
+        </div>
+      </div>
+    </section>
+    <!-- About Section End -->
 
     <!-- feather icon -->
     <script>
