--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
     <section class="hero" id="home">
       <main class="content">
         <h1>Mari Nikmati Secangkir <span>Kopi</span></h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus, ullam.</p>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus,
+          ullam.
+        </p>
         <a href="#" class="cta">Beli Sekarang</a>
       </main>
     </section>
@@ -55,16 +58,113 @@
 
       <div class="row">
         <div class="about-img">
-          <img src="img/tentang-kami.jpg" alt="Tentang Kami">
+          <img src="img/tentang-kami.jpg" alt="Tentang Kami" />
         </div>
         <div class="content">
           <h3>Kenapa memilih kopi kami?</h3>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis debitis, numquam ex quis voluptate obcaecati?</p>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum esse ex expedita nam repellendus magni in exercitationem non, reiciendis vel?</p>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            Perferendis debitis, numquam ex quis voluptate obcaecati?
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
+            esse ex expedita nam repellendus magni in exercitationem non,
+            reiciendis vel?
+          </p>
         </div>
       </div>
     </section>
     <!-- About Section End -->
+
+    <!-- Menu Section Start -->
+    <section class="menu" id="menu">
+      <h2><span>Menu</span> Kami</h2>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi esse
+        amet ad deleniti, aut numquam!
+      </p>
+      <div class="row">
+        <div class="menu-card">
+          <img src="img/menu/1.jpg" alt="Espresso" class="menu-card-img" />
+          <h3 class="menu-card-title">- Espresso -</h3>
+          <p class="menu-card-price">IDR 15K</p>
+        </div>
+        <div class="menu-card">
+          <img src="img/menu/1.jpg" alt="Espresso" class="menu-card-img" />
+          <h3 class="menu-card-title">- Espresso -</h3>
+          <p class="menu-card-price">IDR 15K</p>
+        </div>
+        <div class="menu-card">
+          <img src="img/menu/1.jpg" alt="Espresso" class="menu-card-img" />
+          <h3 class="menu-card-title">- Espresso -</h3>
+          <p class="menu-card-price">IDR 15K</p>
+        </div>
+        <div class="menu-card">
+          <img src="img/menu/1.jpg" alt="Espresso" class="menu-card-img" />
+          <h3 class="menu-card-title">- Espresso -</h3>
+          <p class="menu-card-price">IDR 15K</p>
+        </div>
+        <div class="menu-card">
+          <img src="img/menu/1.jpg" alt="Espresso" class="menu-card-img" />
+          <h3 class="menu-card-title">- Espresso -</h3>
+          <p class="menu-card-price">IDR 15K</p>
+        </div>
+      </div>
+    </section>
+    <!-- Menu Section End -->
+
+    <!-- Contact Section Start -->
+    <section id="contact" class="contact">
+      <h2><span>Kontak</span> Kami</h2>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi esse
+        amet ad deleniti, aut numquam!
+      </p>
+      <div class="row">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126829.29007905214!2d106.791892!3d-6.595193500000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69c5b7ad0f824b%3A0x4c71fd1b0b8ae76d!2sBogor%20City%2C%20West%20Java!5e0!3m2!1sen!2sid!4v1705312745182!5m2!1sen!2sid"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+          class="map"
+        ></iframe>
+        <form action="">
+          <div class="input-group">
+            <i data-feather="user"></i>
+            <input type="text" name="" id="" placeholder='nama'>
+          </div>
+          <div class="input-group">
+            <i data-feather="mail"></i>
+            <input type="text" name="" id="" placeholder='email'>
+          </div>
+          <div class="input-group">
+            <i data-feather="phone"></i>
+            <input type="text" name="" id="" placeholder='no hp'>
+          </div>
+          <button type='submit' class='btn'>Kirim pesan</button>
+        </form>
+      </div>
+    </section>
+    <!-- Contact Section Start -->
+
+    <!-- Footer Start -->
+    <footer>
+      <div class="socials">
+        <a href="#"><i data-feather="instagram"></i></a>
+        <a href="#"><i data-feather="twitter"></i></a>
+        <a href="#"><i data-feather="facebook"></i></a>
+      </div>
+      <div class="links">
+        <a href="#home">Home</a>
+        <a href="#about">Tentang Kami</a>
+        <a href="#menu">Menu</a>
+        <a href="#contact">Kontak</a>
+      </div>
+      <div class="credit">
+        <p>Created at <a href="">sandikagalih</a>. | &copy; 2023.</p>
+      </div>
+    </footer>
+    <!-- Footer End -->
 
     <!-- feather icon -->
     <script>
