--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     ></script>
 
     <!-- app -->
-    <script src="src/app.js"></script>
+    <script src="src/app.js" async></script>
   </head>
   <body>
     <!-- navbar start -->
@@ -67,32 +67,6 @@
       <!-- Search Form End -->
 
       <!-- Shopping Cart start -->
-      <!-- <div class="shopping-cart">
-        <div class="cart-item">
-          <img src="img/products/1.jpg" alt="Product 1" />
-          <div class="item-detail">
-            <h3>Product 1</h3>
-            <div class="item-price">IDR 30k</div>
-          </div>
-          <i data-feather="trash-2" class="remove-item"></i>
-        </div>
-        <div class="cart-item">
-          <img src="img/products/1.jpg" alt="Product 1" />
-          <div class="item-detail">
-            <h3>Product 1</h3>
-            <div class="item-price">IDR 30k</div>
-          </div>
-          <i data-feather="trash-2" class="remove-item"></i>
-        </div>
-        <div class="cart-item">
-          <img src="img/products/1.jpg" alt="Product 1" />
-          <div class="item-detail">
-            <h3>Product 1</h3>
-            <div class="item-price">IDR 30k</div>
-          </div>
-          <i data-feather="trash-2" class="remove-item"></i>
-        </div>
-      </div> -->
       <div class="shopping-cart">
         <template x-for="(item, index) in $store.cart.items" x-key="index">
           <div class="cart-item">
@@ -115,6 +89,8 @@
 
         <div class="form-container" x-show="$store.cart.items.length">
           <form action="" id="checkoutForm">
+            <input type="hidden" name="items" x-model="JSON.stringify($store.cart.items)">
+            <input type="hidden" name="total" x-model="$store.cart.total">
             <h5>Customer Detail</h5>
 
             <label for="name">
@@ -129,10 +105,10 @@
 
             <label for="phone">
               <span>Phone</span>
-              <input type="text" name="phone" id="phone" autocomplete="off">
+              <input type="number" name="phone" id="phone" autocomplete="off">
             </label>
 
-            <button type="submit" class="checkout-button" id="checkout-button">Checkcout</button>
+            <button type="submit" class="checkout-button disabled" id="checkout-button" value="checkout">Checkcout</button>
           </form>
         </div>
       </div>
